--- a/Exercise/graphGeneration.ipynb
+++ b/Exercise/graphGeneration.ipynb
@@ -11,7 +11,7 @@
     "Aditya Grover and Jure Leskovec \n",
     "Knowledge Discovery and Data Mining (KDD), 2016\n",
     "\n",
-    "2. Reference implementation of link prediction task using fb data: Lucas Hu https://github.com/lucashu1"
+    "2. Reference implementation of link prediction task using fb data: Lucas Hu"
    ]
   },
   {
@@ -96,6 +96,13 @@
     "with open(\"0-adj-feat.pkl\", \"wb\") as f:\n",
     "       pickle.dump(network_tuple, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
